argocd/app-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  selector:
    matchLabels:
      app: java-app
  replicas: 1
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/java-pipeline/java-app:latest
          ports:
            - containerPort: 8080
