argocd/app-config/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app-route
  labels:
    app.kubernetes.io/instance: java-app
    app.kubernetes.io/name: java-app
spec:
  host: ''
  to:
    kind: Service
    name: app-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
